--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.0.5
   curved_navigation_bar: ^1.0.6
   motion_tab_bar: ^2.0.4
+  motion_tab_bar_v2: ^0.3.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
