--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   motion_tab_bar: ^2.0.4
   motion_tab_bar_v2: ^0.3.0
   google_fonts: ^3.0.1
+  like_button: ^2.0.5
 
 dev_dependencies:
   flutter_test:
