--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,6 +43,7 @@ dependencies:
   motion_tab_bar_v2: ^0.3.0
   google_fonts: ^3.0.1
   like_button: ^2.0.5
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
