--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   like_button: ^2.0.5
   carousel_slider: ^4.0.0
   google_fonts: ^6.2.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/icons/icon_1.png"
 
 dev_dependencies:
   flutter_test:
